--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </header>
         <main>
           <p>O Veganismo segundo a Vegan Society é um modo de vida que procura excluir, na medida do possível e praticável, todas as formas de exploração e crueldade dos animais - seja na alimentação, no vestuário ou em outras esferas do consumo.</p>
-          <p id="citation"><i>“Há muitas maneiras de abraçar a vida vegana. No entanto, uma coisa que todos os vegans têm em comum é uma dieta baseada em vegetais evitando todos os alimentos de origem animal, como carne (incluindo peixes, moluscos e insetos), laticínios, ovos e mel - assim como produtos como couro e qualquer testado em animais.” (Vegan Society)</i></p>
+          <p id="citation"><i>“Há muitas maneiras de abraçar a vida vegana. No entanto, uma coisa que todos os vegans têm em comum é uma dieta baseada em vegetais evitando todos os alimentos de origem animal, como carne (incluindo peixes, moluscos e insetos), laticínios, ovos e mel - assim como produtos como couro e qualquer outro testado em animais.” (Vegan Society)</i></p>
         </main>
       </article>
       
