Plotados os mockups no mapa; Criada a lista dos locais; Iniciado a parte de links uteis

--- a/index.html
+++ b/index.html
@@ -5,18 +5,42 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="stylesheet" type="text/css" href="../css/locals.css">
   <title>Document</title>
 </head>
 
 <body>
+  
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="#">
+      <img src="/docs/4.3/assets/brand/bootstrap-solid.svg" width="30" height="30" alt="">
+    </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
 
-  <nav id="menu">
-    <ul>
-      <li><a href="#whats-is-title">O que é</a></li>
-      <li><a href="#why-title">Por que</a></li>
-      <li><a href="#importance-title">Importância</a></li>
-      <li><a href="./pages/locals.html">Locais</a></li>
-    </ul>
+    <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-sm-4">
+        <li class="nav-item">
+          <a href="#whats-is-title" class="nav-link">O que é</a>
+        </li>
+        <li class="nav-item">
+          <a href="#why-title" class="nav-link">Por que</a>
+        </li>
+        <li class="nav-item">
+          <a href="#importance-title" class="nav-link">Importância</a>
+        </li>
+        <li class="nav-item">
+          <a href="pages/locals.html" class="nav-link">Locais</a>
+        </li>
+        <li class="nav-item">
+          <a href="pages/utils-links.html" class="nav-link">Links Úteis</a>
+        </li>
+      </ul>
+    </div>
   </nav>
 
   <main id="main-master">
@@ -66,5 +90,15 @@
       </article>
     </div>
   </main>
+
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+    crossorigin="anonymous"></script>
 </body>
 </html>
