Modificado a exibição do cardapio e o modal dos markers

--- a/pages/utils-links.html
+++ b/pages/utils-links.html
@@ -9,16 +9,47 @@
   <title>Document</title>
 </head>
 <body>
-	<main class="container-fluid">
-		<header>
-			<h1>Olá, criamos essa aba com o intuito de recomendar conteúdos que possam ser úteis pra quem é ou pretende ser veg.</h1>
-		</header>
-		<article class="container">
+
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="#">
+      <img src="/docs/4.3/assets/brand/bootstrap-solid.svg" width="30" height="30" alt="">
+    </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-sm-4">
+        <li class="nav-item">
+          <a href="#whats-is-title" class="nav-link">O que é</a>
+        </li>
+        <li class="nav-item">
+          <a href="#why-title" class="nav-link">Por que</a>
+        </li>
+        <li class="nav-item">
+          <a href="#importance-title" class="nav-link">Importância</a>
+        </li>
+        <li class="nav-item">
+          <a href="./locals.html" class="nav-link">Locais</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+
+	<main class="container-fluid pt-3">
+    <div class="jumbotron">
+      <h1 class="display-4">Olá!</h1>
+      <p class="lead">Criamos essa aba com o intuito de recomendar conteúdos que possam ser úteis pra quem é ou pretende ser veg.</p>
+      <hr class="my-4">
+    </div>
+
+    <div class="container">
       <div class="row d-flex align-items-center" >
 			  <h2 class="col-3">Como montar um prato vegetariano</h2>
         <iframe class="col-9" width="967" height="444" src="https://www.youtube.com/embed/v8xRwaTtU7o" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			</div>
-		</article>
+		</div>
 	</main>
 
 
