Fixando navbar. Corrigindo titulo e link ativo.

--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="../css/locals.css">
-  <title>Document</title>
+  <title>Como ser vegano/vegetariano - Um guia para todos</title>
 </head>
 
 <body>
-  
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+
+  <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
     <a class="navbar-brand" href="#">
       <img src="/docs/4.3/assets/brand/bootstrap-solid.svg" width="30" height="30" alt="">
     </a>
@@ -24,7 +24,7 @@
 
     <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
       <ul class="navbar-nav mr-sm-4">
-        <li class="nav-item">
+        <li class="nav-item active">
           <a href="#whats-is-title" class="nav-link">O que é</a>
         </li>
         <li class="nav-item">
