adicionado cor e imagem a pagina home, iniciado links uteis

--- a/index.html
+++ b/index.html
@@ -7,15 +7,18 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <link rel="stylesheet" type="text/css" href="../css/locals.css">
+  <link rel="stylesheet" type="text/css" href="./css/locals.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="stylesheet" type="text/css" href="./css/base.css">  
   <title>Como ser vegano/vegetariano - Um guia para todos</title>
 </head>
 
 <body>
 
-  <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
+  <nav class="navbar navbar-expand-lg bg-green sticky-top">
     <a class="navbar-brand" href="#">
-      <img src="/docs/4.3/assets/brand/bootstrap-solid.svg" width="30" height="30" alt="">
+      <img src="./img/logo.png" width="30" height="30" alt="">
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -25,19 +28,19 @@
     <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
       <ul class="navbar-nav mr-sm-4">
         <li class="nav-item active">
-          <a href="#whats-is-title" class="nav-link">O que é</a>
+          <a href="#whats-is-title" class="nav-link text-white">O que é</a>
         </li>
         <li class="nav-item">
-          <a href="#why-title" class="nav-link">Por que</a>
+          <a href="#why-title" class="nav-link text-white">Por que</a>
         </li>
         <li class="nav-item">
-          <a href="#importance-title" class="nav-link">Importância</a>
+          <a href="#importance-title" class="nav-link text-white">Importância</a>
         </li>
         <li class="nav-item">
-          <a href="pages/locals.html" class="nav-link">Locais</a>
+          <a href="pages/locals.html" class="nav-link text-white">Locais</a>
         </li>
         <li class="nav-item">
-          <a href="pages/utils-links.html" class="nav-link">Links Úteis</a>
+          <a href="pages/utils-links.html" class="nav-link text-white">Links Úteis</a>
         </li>
       </ul>
     </div>
@@ -47,42 +50,57 @@
     <div class="text">
       <article class="topic" id="vegetarian">
         <header>
-          <h1 id="whats-is-title">Vegetarianismo</h1>
+          <h1 id="whats-is-title" class="title-topic">Vegetarianismo</h1>
         </header>
         <main class="main-veg">
-          <p>Segundo a Sociedade Vegetariana Brasileira, o Vegetarianismo é o regime alimentar que exclui todos os tipos de carnes. O vegetarianismo costuma ser classificado da seguinte forma:</p>
-          <ul id="classificationVeg">
-            <li >Ovolactovegetarianismo: utiliza ovos, leite e laticínios na sua alimentação.</li>
-            <li>Lactovegetarianismo: utiliza leite e laticínios na sua alimentação.</li>
-            <li>Ovovegetarianismo: utiliza ovos na sua alimentação.</li>
-            <li>Vegetarianismo estrito: não utiliza nenhum produto de origem animal na sua alimentação.</li>
-          </ul>
+          <p>Segundo a Sociedade Vegetariana Brasileira, o Vegetarianismo é o regime alimentar que exclui todos os tipos de carnes.</p>
+          <div class="row">
+            <img width="100%" height="100%" src="img/icons-09.png" class="col-sm-12 col-md-4 col-lg-3"></img>
+            <div class="col-sm-12 col-md-8 col-lg-9">
+              <p>O vegetarianismo costuma ser classificado da seguinte forma:</p>
+              <ul id="classificationVeg"> 
+                <li >Ovolactovegetarianismo: utiliza ovos, leite e laticínios na sua alimentação.</li>
+                <li>Lactovegetarianismo: utiliza leite e laticínios na sua alimentação.</li>
+                <li>Ovovegetarianismo: utiliza ovos na sua alimentação.</li>
+                <li>Vegetarianismo estrito: não utiliza nenhum produto de origem animal na sua alimentação.</li>
+              </ul>
+            </div>
+            
+          </div>
+          
         </main>
       </article>
 
       <article class="topic" id="vegan">
         <header>
-          <h1 id="whats-is">Veganismo</h1>
+          <h1 id="whats-is" class="title-topic">Veganismo</h1>
         </header>
         <main>
           <p>O Veganismo segundo a Vegan Society é um modo de vida que procura excluir, na medida do possível e praticável, todas as formas de exploração e crueldade dos animais - seja na alimentação, no vestuário ou em outras esferas do consumo.</p>
-          <p id="citation"><i>“Há muitas maneiras de abraçar a vida vegana. No entanto, uma coisa que todos os vegans têm em comum é uma dieta baseada em vegetais evitando todos os alimentos de origem animal, como carne (incluindo peixes, moluscos e insetos), laticínios, ovos e mel - assim como produtos como couro e qualquer outro testado em animais.” (Vegan Society)</i></p>
+          <div class="row">
+            <div class="col-sm-12 col-md-9 col-lg-10">
+              <p id="citation"><i>“Há muitas maneiras de abraçar a vida vegana. No entanto, uma coisa que todos os vegans têm em comum é uma dieta baseada em vegetais evitando todos os alimentos de origem animal, como carne (incluindo peixes, moluscos e insetos), laticínios, ovos e mel - assim como produtos como couro e qualquer outro testado em animais.” (Vegan Society)</i></p>
+            </div>
+            <img width="100%" height="100%" src="img/icons_Prancheta 1.png" class="col-sm-12 col-md-3 col-lg-2"></img>
+          </div>
         </main>
       </article>
 
       <article class="topic" id="why">
         <header>
-          <h1 id="why-title">Por que?</h1>
+          <h1 id="why-title" class="title-topic">Por que?</h1>
         </header>
         <main>
           <p>Já parou pra pensar nos motivos que levam cada vez mais pessoas no mundo se tornarem veganas ou vegetarianas?</p>
           <p>Diversos são os motivos, os principais estão relacionados a <b>Ética</b>, <b>Meio Ambiente</b> e a <b>Saúde</b>.</p>
+          <!-- <img width="100%" src="img/ReasonsBeVeg3.gif" class=""></img> -->
+          <img width="100%" src="img/ReasonsBeVeg3_Prancheta 1_Prancheta 1.png" class=""></img>
         </main>
       </article>
 
       <article class="topic" id="importance">
         <header>
-          <h1 id="importance-title">Importância</h1>
+          <h1 id="importance-title" class="title-topic">Importância</h1>
         </header>
         <main>
           <p>O Vegetarianismo e o Veganismo vem contribuindo profusamente para as causas ambientais e relacionadas a ética animal</p>
