Padronizado a navbar e corrigido os nav links; Construído a parte de filmes; Corrigido a logo na navbar;

--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
 
   <nav class="navbar navbar-expand-lg bg-green sticky-top">
     <a class="navbar-brand" href="#">
-      <img src="./img/logo.png" width="30" height="30" alt="">
+      <img src="./img/logo.png" id="nav_logo" alt="">
     </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+    <button class="navbar-toggler   navbar-light bg-light" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
 
     <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-sm-4">
+      <ul class="navbar-nav">
         <li class="nav-item active">
           <a href="#whats-is-title" class="nav-link text-white">O que é</a>
         </li>
@@ -42,12 +42,17 @@
         <li class="nav-item">
           <a href="pages/utils-links.html" class="nav-link text-white">Links Úteis</a>
         </li>
+        <li>
+          <a href="pages/movies.html" class="nav-link text-white">Filmes</a>
+        </li>
       </ul>
     </div>
   </nav>
 
   <main id="main-master">
+
     <div class="text">
+
       <article class="topic" id="vegetarian">
         <header>
           <h1 id="whats-is-title" class="title-topic">Vegetarianismo</h1>
@@ -65,9 +70,7 @@
                 <li>Vegetarianismo estrito: não utiliza nenhum produto de origem animal na sua alimentação.</li>
               </ul>
             </div>
-            
           </div>
-          
         </main>
       </article>
 
@@ -107,8 +110,10 @@
         </main>
       </article>
     </div>
+
   </main>
 
+  
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
     crossorigin="anonymous"></script>
