--- a/pages/locals.html
+++ b/pages/locals.html
@@ -2,21 +2,21 @@
 <html lang="en">
 
 <head>
+  <link rel="stylesheet" type="text/css" href="../css/locals.css">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <link rel="stylesheet" type="text/css" href="../css/locals.css">
-
+  <link rel="stylesheet" type="text/css" href="../css/base.css">
   <title>Locais</title>
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
+  <nav class="navbar navbar-expand-lg bg-green sticky-top">
     <a class="navbar-brand" href="#">
-      <img src="/docs/4.3/assets/brand/bootstrap-solid.svg" width="30" height="30" alt="">
+      <img src="../img/logo.png" id="nav_logo" alt="">
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -24,21 +24,24 @@
     </button>
 
     <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-sm-4">
-        <li class="nav-item">
-          <a href="../index.html#whats-is-title" class="nav-link">O que é</a>
-        </li>
-        <li class="nav-item">
-          <a href="../index.html#why-title" class="nav-link">Por que</a>
-        </li>
-        <li class="nav-item">
-          <a href="../index.html#importance-title" class="nav-link">Importância</a>
-        </li>
+      <ul class="navbar-nav">
         <li class="nav-item active">
-          <a href="./locals.html" class="nav-link">Locais</a>
+          <a href="../index.html#whats-is-title" class="nav-link text-white">O que é</a>
         </li>
         <li class="nav-item">
-          <a href="pages/utils-links.html" class="nav-link">Links Úteis</a>
+          <a href="../index.html#why-title" class="nav-link text-white">Por que</a>
+        </li>
+        <li class="nav-item">
+          <a href="../index.html#importance-title" class="nav-link text-white">Importância</a>
+        </li>
+        <li class="nav-item">
+          <a href="../pages/locals.html" class="nav-link text-white">Locais</a>
+        </li>
+        <li class="nav-item">
+          <a href="../pages/utils-links.html" class="nav-link text-white">Links Úteis</a>
+        </li>
+        <li>
+          <a href="../pages/movies.html" class="nav-link text-white">Filmes</a>
         </li>
       </ul>
     </div>
@@ -80,6 +83,7 @@
     </div>
   </main>
 
+
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
     crossorigin="anonymous"></script>
@@ -93,8 +97,8 @@
   <script src="../scripts/locals.js"></script>
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAQ4qkekcYm0727yhYzNYZbPRwoFnyHDPE&callback=initMap"
     async defer></script>
-</body>
 
+</body>
 </html>
 
 
