removido imagens que não estavam sendo utilizadas da pasta img; modificado nome de uma imagem do index

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         <main>
           <p>Já parou pra pensar nos motivos que levam cada vez mais pessoas no mundo se tornarem veganas ou vegetarianas?</p>
           <p>Diversos são os motivos, os principais estão relacionados a <b>Saúde</b>, o <b>Meio Ambiente</b> e a <b>Ética</b>.</p>
-          <img width="100%" src="img/ReasonsBeVeg3_Prancheta 1_Prancheta 1.png" id="ReasonsBeVeg"></img>
+          <img width="100%" src="img/ReasonsBeVeg3.png" id="ReasonsBeVeg"></img>
           <div>
             <p><b>Saúde</b></p>
             <p>Dietas Vegetarianas possuiem um menor consumo de gorduras saturadas, colesterol, proteínas animais e sódio. Diversos estudos apontam para a eficácia da dieta vegetariana na prevenção da incidência de doenças crônicas degenerativas (doenças coronárias, derrame, hipertensão, obesidade, diabetes, diverticulose, cânceres), além de apresentarem um aumento da longevidade¹. </p>
