Atualiza api key do maps

--- a/pages/locals.html
+++ b/pages/locals.html
@@ -101,7 +101,7 @@
     crossorigin="anonymous"></script>
   <script type="text/javascript" src="../scripts/mockup-locals.js"></script>
   <script src="../scripts/locals.js"></script>
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAQ4qkekcYm0727yhYzNYZbPRwoFnyHDPE&callback=initMap"
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBke6yDVb8xq3BZ-1i6nfR1TO1Et34a8qI"
     async defer></script>
 
 </body>
