--- a/pages/locals.html
+++ b/pages/locals.html
@@ -99,7 +99,7 @@
     crossorigin="anonymous"></script>
   <script type="text/javascript" src="../scripts/mockup-locals.js"></script>
   <script src="../scripts/locals.js"></script>
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAF8QP6R3rJFZLZJcEsee3B3a1wz6Pul8E"
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAF8QP6R3rJFZLZJcEsee3B3a1wz6Pul8E&callback=initMap"
     async defer></script>
 
 </body>
